# volca

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  README.md  build-mumps.sh  build.sh  cabal.project.local.example  deploy-coverage.sh  docker-build.sh  docker-entrypoint.sh  fourmolu.yaml  fplca.cabal  gen-cabal-config.sh  hie.yaml  hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  install.ps1  install.sh  lib.sh  petsc.env  release.sh  rts-flags.sh  versions.env  volca.cabal  volca.sh  volca.toml
.github/actions/publish-prebuilt-release/: action.yml
.github/actions/read-versions/: action.yml
.github/actions/setup-haskell-env/: action.yml
.github/workflows/: _build-matrix.yml  build.yml  prebuild-cabal-store.yml  prebuild-mumps.yml  pyvolca.yml  release.yml
app/: Main.hs
data/: compartments.csv  geographies.csv  units.csv
desktop/: Cargo.toml  build-desktop.sh  nsis-hooks.nsh  stage-resources.sh  tauri.conf.json  tauri.linux.conf.json  volca.toml
desktop/loading/: index.html
desktop/src/: main.rs
docker/: Dockerfile
docs/: release.md
mumps-hs/cbits/: mumps_wrapper.c  mumps_wrapper.h
mumps-hs/src/Numerical/: MUMPS.hs
petsc-hs-0.1.0.0-inplace/: Numerical.PETSc.Internal.C2HsGen.TypesC2HsGen.hs.html  Numerical.PETSc.Internal.Exception.hs.html  Numerical.PETSc.Internal.InlineC.hs.html  Numerical.PETSc.Internal.PutGet.KSP.hs.html  Numerical.PETSc.Internal.PutGet.Mat.hs.html  Numerical.PETSc.Internal.PutGet.PC.hs.html  Numerical.PETSc.Internal.PutGet.PetscMisc.hs.html  Numerical.PETSc.Internal.PutGet.Vec.hs.html  Numerical.PETSc.Internal.PutGet.Viewer.hs.html  Numerical.PETSc.Internal.Storable.Common.hs.html  Numerical.PETSc.Internal.Storable.Vector.hs.html  Numerical.PETSc.Internal.Types.hs.html  Numerical.PETSc.Internal.Utils.hs.html
plugins/examples/: README.md  fuzzy-match.py  uppercase-reporter.sh
pyfplca/src/fplca/: client.py
pyvolca/: LICENSE  README.md  pyproject.toml
pyvolca/examples/: feed_ratio.py  ingredient_substitution.py  raw_ingredient_substitution.py
pyvolca/scripts/: gen_api_md.py
pyvolca/src/volca/: __init__.py  _download.py  agribalyse.py  client.py  compare.py  server.py  types.py
pyvolca/tests/: conftest.py  test_dispatch.py  test_download.py  test_readme_examples.py
src/: Config.hs  ConfigWriter.hs  Database.hs  Expr.hs  Main.hs  Matrix.hs  Progress.hs  Service.hs  SharedSolver.hs  SynonymDB.hs  Tree.hs  Types.hs  UnitConversion.hs
src/API/: Auth.hs  DatabaseHandlers.hs  JsonOptions.hs  MCP.hs  OpenApi.hs  Resources.hs  Routes.hs  Types.hs
src/CLI/: Client.hs  Command.hs  Parser.hs  Repl.hs  Types.hs
src/Database/: CrossLinking.hs  Loader.hs  Manager.hs  Upload.hs  UploadedDatabase.hs
src/EcoSpold/: Common.hs  Parser1.hs  Parser2.hs
src/ILCD/: Parser.hs
src/Matrix/: Export.hs
src/Method/: FlowResolver.hs  Mapping.hs  Parser.hs  ParserCSV.hs  ParserNW.hs  ParserSimaPro.hs  Types.hs
src/Method/Parser/: OlcaSchema.hs
src/Plugin/: Bridge.hs  Builtin.hs  Config.hs  Types.hs
src/Search/: BM25.hs  Fuzzy.hs  Normalize.hs
src/Search/BM25/: Types.hs
src/Service/: Aggregate.hs
src/SimaPro/: Expr.hs  Parser.hs
src/SynonymDB/: Extract.hs  Types.hs
src/Tools/: SynonymsCompiler.hs
test/: BM25Spec.hs  CrossDBInventorySpec.hs  CrossDBSubstitutionSpec.hs  CrossLinkingSpec.hs  DatabaseStatusSpec.hs  EcoSpold1Spec.hs  FlowResolverSpec.hs  FuzzySpec.hs  GoldenData.hs  HotspotSpec.hs  ILCDParserSpec.hs  InventorySpec.hs  LoaderSpec.hs  MCPSchemaSpec.hs  MappingSpec.hs  MatrixConstructionSpec.hs  MatrixExportSpec.hs  MethodSpec.hs  NestedSubstitutionSpec.hs  OlcaSchemaSpec.hs  ParserSpec.hs  PluginConfigSpec.hs  PluginSpec.hs  ProgressSpec.hs  ServerSpec.hs  ServiceSpec.hs  SharedSolverSpec.hs  SimaProParserSpec.hs  Spec.hs  SubstitutionSpec.hs  SupplyChainSpec.hs  TestHelpers.hs  TreeSpec.hs  UnitConversionSpec.hs  UploadedDatabaseSpec.hs
test-data/: expected-results.md  test_samples.sh
test-data/SAMPLE.ecospold1/: process1.xml
test-data/SAMPLE.min3/: aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa_productX-uuid.spold  bbbbbbbb-bbbb-bbbb-bbbb-bbbbbbbbbbbb_productY-uuid.spold  dddddddd-dddd-dddd-dddd-dddddddddddd_productZ-uuid.spold
test-data/olca-schema-mini/: impact-category-mini.json
test/data/: method.csv  normweighting.csv  simapro_method.csv
volca-0.6.0-inplace/: API.Types.hs.html  CLI.Types.hs.html  Database.CrossLinking.hs.html  Database.Loader.hs.html  Database.Upload.hs.html  Database.UploadedDatabase.hs.html  Database.hs.html  EcoSpold.Common.hs.html  EcoSpold.Parser1.hs.html  EcoSpold.Parser2.hs.html  ILCD.Parser.hs.html  Matrix.Export.hs.html  Matrix.hs.html  Method.FlowResolver.hs.html  Method.Mapping.hs.html  Method.Parser.hs.html  Method.ParserCSV.hs.html  Method.ParserNW.hs.html  Method.ParserSimaPro.hs.html  Method.Types.hs.html  Plugin.Bridge.hs.html  Plugin.Builtin.hs.html  Plugin.Config.hs.html  Plugin.Types.hs.html  Progress.hs.html  Service.hs.html  SharedSolver.hs.html  SimaPro.Expr.hs.html  SimaPro.Parser.hs.html  SynonymDB.Types.hs.html  SynonymDB.hs.html  Tree.hs.html  Types.hs.html  UnitConversion.hs.html
volca-0.6.0-inplace-acv-tests/: GoldenData.hs.html  ILCDParserSpec.hs.html  InventorySpec.hs.html  Main.hs.html  MatrixConstructionSpec.hs.html  MatrixExportSpec.hs.html  MethodSpec.hs.html  ParserSpec.hs.html  PluginSpec.hs.html  ServerSpec.hs.html  SimaProParserSpec.hs.html  TestHelpers.hs.html  UnitConversionSpec.hs.html
volca-0.6.0-inplace-lca-tests/: CrossLinkingSpec.hs.html  EcoSpold1Spec.hs.html  ILCDParserSpec.hs.html  Main.hs.html  MappingSpec.hs.html  MethodSpec.hs.html  ProgressSpec.hs.html  ServerSpec.hs.html  ServiceSpec.hs.html  SimaProParserSpec.hs.html  UnitConversionSpec.hs.html  UploadedDatabaseSpec.hs.html
web/: build.sh  elm.json  index.html  index.html.tmpl  package.json
web/src/: Api.elm  Main.elm  Route.elm  Shared.elm  View.elm
web/src/Models/: Database.elm  Flow.elm  Inventory.elm  LCIA.elm  SupplyChain.elm  Variant.elm
web/src/Pages/: Activities.elm  Composition.elm  Consumers.elm  DatabaseDetail.elm  DatabaseSetup.elm  (+21 more)
(+15 files in other folders)
