cabal-version:       >=1.10
name:                fplca
version:             0.6.0-dev
build-type:          Simple

license:             AGPL-3.0-or-later
license-file:        LICENSE
author:              Christophe Combelles
maintainer:          ccomb@free.fr
category:            Life Cycle Assessment
synopsis:            In-memory high performance LCA engine
description:         This project is a Life Cycle Assessment (LCA) engine.

extra-source-files:  README.md CHANGELOG.md

executable fplca
  main-is:             Main.hs
  hs-source-dirs:      src
  -- for weeder: -fwrite-ide-info -hiedir=.hie
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwrite-ide-info -hiedir=.hie
  -- Use environment variables for PETSc/SLEPc paths
  -- Set PETSC_DIR and SLEPC_DIR before building:
  -- export PETSC_DIR=/path/to/petsc
  -- export SLEPC_DIR=/path/to/slepc
  build-depends:       base >=4.14 && <5
                     , optparse-applicative
                     , text
                     , containers
                     , xeno
                     , filepath
                     , directory
                     , mtl
                     , bytestring
                     , deepseq
                     , parallel
                     , stm
                     , async
                     , conduit
                     , xml-types
                     , servant-server
                     , servant
                     , servant-multipart
                     , warp
                     , aeson
                     , aeson-pretty
                     , wai
                     , wai-cors
                     , wai-app-static
                     , store
                     , zstd
                     , time
                     , hashable
                     , uuid
                     , http-types
                     , network-uri
                     , streaming-commons
                     , vector
                     , containers
                     , random
                     , petsc-hs
                     , base64-bytestring
                     , toml-reader
                     , filelock
                     , temporary
                     , process
                     , cassava

  -- Unix-specific dependency for SIGPIPE handling (not available on Windows)
  if !os(windows)
    build-depends: unix

  other-modules:     Types
                     , Progress
                     , UnitConversion
                     , Config
                     , ConfigWriter
                     , Service
                     , Tree
                     , Matrix
                     , Matrix.Export
                     , SharedSolver
                     , Database
                     , Database.Manager
                     , Database.Loader
                     , Database.CrossLinking
                     , Database.Upload
                     , Database.UploadedDatabase
                     , SynonymDB
                     , SynonymDB.Types
                     , SynonymDB.Extract
                     , Method.Types
                     , Method.Parser
                     , Method.ParserCSV
                     , Method.Mapping
                     , Method.FlowResolver
                     , API.Routes
                     , API.Types
                     , API.DatabaseHandlers
                     , API.Auth
                     , CLI.Types
                     , CLI.Parser
                     , CLI.Command
                     , EcoSpold.Common
                     , EcoSpold.Parser2
                     , EcoSpold.Parser1
                     , SimaPro.Parser
  default-language:    Haskell2010

--executable test-mumps
--  main-is:             test_mumps.hs
--  hs-source-dirs:      .
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base >=4.14 && <5
--                     , petsc-hs
--                     , vector
--                     , time
--  default-language:    Haskell2010

test-suite acv-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       TestHelpers
                     , GoldenData
                     , MatrixConstructionSpec
                     , InventorySpec
                     , ParserSpec
                     , MatrixExportSpec
                     , MethodSpec
                     , SimaProParserSpec
                     , UnitConversionSpec
                     , Types
                     , Progress
                     , UnitConversion
                     , Database
                     , Database.Loader
                     , Database.CrossLinking
                     , Database.Upload
                     , Database.UploadedDatabase
                     , Matrix
                     , Matrix.Export
                     , SharedSolver
                     , Service
                     , Tree
                     , CLI.Types
                     , Method.Types
                     , Method.Parser
                     , Method.ParserCSV
                     , Method.Mapping
                     , Method.FlowResolver
                     , API.Types
                     , SynonymDB
                     , SynonymDB.Types
                     , SynonymDB.Extract
                     , EcoSpold.Common
                     , EcoSpold.Parser2
                     , EcoSpold.Parser1
                     , SimaPro.Parser
  build-depends:       base >=4.14 && <5
                     , hspec
                     , text
                     , containers
                     , vector
                     , bytestring
                     , xeno
                     , directory
                     , filepath
                     , temporary
                     , petsc-hs
                     , deepseq
                     , parallel
                     , store
                     , zstd
                     , time
                     , hashable
                     , uuid
                     , aeson
                     , mtl
                     , optparse-applicative
                     , async
                     , stm
                     , xml-types
                     , conduit
                     , process
                     , cassava
  default-language:    Haskell2010
