cabal-version:       2.4
name:                volca
version:             0.6.0-dev
build-type:          Simple

license:             Apache-2.0
license-file:        LICENSE
author:              Christophe Combelles
maintainer:          ccomb@free.fr
category:            Life Cycle Assessment
synopsis:            In-memory high performance LCA engine
description:         This project is a Life Cycle Assessment (LCA) engine.

extra-source-files:  README.md CHANGELOG.md

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Types
                     , Progress
                     , UnitConversion
                     , Config
                     , ConfigWriter
                     , Service
                     , Service.Aggregate
                     , Tree
                     , Matrix
                     , Matrix.Export
                     , SharedSolver
                     , Database
                     , Database.Manager
                     , Database.Loader
                     , Database.CrossLinking
                     , Database.Upload
                     , Database.UploadedDatabase
                     , SynonymDB
                     , SynonymDB.Types
                     , SynonymDB.Extract
                     , Method.Types
                     , Method.Parser
                     , Method.ParserCSV
                     , Method.ParserSimaPro
                     , Method.ParserNW
                     , Method.Mapping
                     , Method.FlowResolver
                     , API.Routes
                     , API.Types
                     , API.JsonOptions
                     , API.DatabaseHandlers
                     , API.Auth
                     , API.MCP
                     , API.OpenApi
                     , API.Resources
                     , CLI.Types
                     , CLI.Parser
                     , CLI.Command
                     , CLI.Client
                     , CLI.Repl
                     , EcoSpold.Common
                     , EcoSpold.Parser2
                     , EcoSpold.Parser1
                     , SimaPro.Parser
                     , Expr
                     , ILCD.Parser
                     , Plugin.Types
                     , Plugin.Builtin
                     , Plugin.Bridge
                     , Plugin.Config
                     , Search.Normalize
                     , Search.BM25
                     , Search.BM25.Types
                     , Search.Fuzzy
                     , Version
  build-depends:       base >=4.14 && <5
                     , optparse-applicative
                     , text
                     , containers
                     , xeno
                     , filepath
                     , directory
                     , mtl
                     , bytestring
                     , deepseq
                     , parallel
                     , stm
                     , async
                     , conduit
                     , xml-types
                     , servant-server
                     , servant
                     , servant-multipart
                     , servant-openapi3
                     , openapi3
                     , insert-ordered-containers
                     , lens
                     , warp
                     , aeson
                     , aeson-pretty
                     , wai
                     , wai-cors
                     , wai-app-static
                     , store
                     , zstd
                     , time
                     , hashable
                     , uuid
                     , http-types
                     , network-uri
                     , streaming-commons
                     , vector
                     , random
                     , mumps-hs
                     , base64-bytestring
                     , toml-reader
                     , filelock
                     , temporary
                     , process
                     , cassava
                     , http-client
                     , haskeline
                     , megaparsec
                     , unicode-transforms

  default-language:    Haskell2010

executable volca
  main-is:             Main.hs
  hs-source-dirs:      app
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2 -j +RTS -A128m -RTS
  build-depends:       base >=4.14 && <5
                     , volca
                     , text
                     , containers
                     , bytestring
                     , stm
                     , time
                     , warp
                     , wai
                     , wai-app-static
                     , servant
                     , servant-server
                     , http-types
                     , http-client
                     , optparse-applicative
                     , aeson

  default-language:    Haskell2010

test-suite lca-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       TestHelpers
                     , GoldenData
                     , MatrixConstructionSpec
                     , InventorySpec
                     , ParserSpec
                     , MatrixExportSpec
                     , MethodSpec
                     , SimaProParserSpec
                     , UnitConversionSpec
                     , PluginSpec
                     , ServerSpec
                     , ILCDParserSpec
                     , SupplyChainSpec
                     , HotspotSpec
                     , TreeSpec
                     , ServiceSpec
                     , CrossLinkingSpec
                     , CrossDBInventorySpec
                     , SharedSolverSpec
                     , FlowResolverSpec
                     , PluginConfigSpec
                     , LoaderSpec
                     , MappingSpec
                     , UploadedDatabaseSpec
                     , ProgressSpec
                     , EcoSpold1Spec
                     , MCPSchemaSpec
                     , NormalizeSpec
                     , BM25Spec
                     , FuzzySpec
                     , NestedSubstitutionSpec
  build-depends:       base >=4.14 && <5
                     , volca
                     , hspec
                     , text
                     , containers
                     , vector
                     , bytestring
                     , temporary
                     , time
                     , aeson
                     , stm
                     , http-client
                     , http-types
                     , process
                     , uuid
                     , filepath
                     , directory
                     , async
                     , warp
                     , wai
                     , servant-server
                     , network-uri

  default-language:    Haskell2010
