[package]
name = "volca-desktop"
version = "0.1.0"
description = "Desktop application for VoLCA - Life Cycle Assessment"
authors = ["VoLCA Contributors"]
edition = "2021"
rust-version = "1.70"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process", "io-util", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
