[project]
name = "pyvolca"
version = "0.1.0"
description = "Python client for VoLCA — Life Cycle Assessment engine"
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest"]
ml = ["sentence-transformers>=2.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
