[project]
name = "pyvolca"
version = "0.2.1"
description = "Python client for VoLCA — Life Cycle Assessment engine"
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
authors = [{name = "Christophe Combelles", email = "ccomb@free.fr"}]
dependencies = ["requests>=2.28"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Documentation = "https://volca.run/docs/guides/pyvolca/"
Repository = "https://github.com/ccomb/volca/tree/main/pyvolca"
Issues = "https://github.com/ccomb/volca/issues"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
